--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -2,7 +2,7 @@
 <section class="m-4 md:mx-0 md:my-8">
   <div class="mb-6 break-words">
     {{ partial "post/meta.html" . }}
-    <h2 class="font-sans text-5xl leading-tight font-bold text-cool-gray-800">{{ .Title }} - {{ .Type }}</h2>
+    <h2 class="font-sans text-5xl leading-tight font-bold text-cool-gray-800">{{ .Title }}</h2>
   </div>
 
   {{ partial "page/content.html" . }}
