--- a/layouts/partials/page/header.html
+++ b/layouts/partials/page/header.html
@@ -4,7 +4,7 @@
   </h1>
 
   <p class="mb-6 text-2xl text-cool-gray-500">
-    {{ .Site.Params.Tagline }}
+    {{ .Site.Params.tagline }}
   </p>
 
   <nav class="text-xl leading-relaxed text-cool-gray-500">
