feat(pages): remove social share and pagination from page's single

--- a/layouts/partials/post/pagination.html
+++ b/layouts/partials/post/pagination.html
@@ -1,3 +1,4 @@
+{{ if ne .Type "page" }}
 <section class="m-4 md:mx-0 md:my-8 border-t border-b border-cool-gray-100 break-words">
   <div class="flex">
     <div class="w-1/2 text-left py-8 pr-8 border-r border-cool-gray-200">
@@ -15,3 +16,4 @@
     </div>
   </div>
 </section>
+{{ end }}
