--- a/layouts/partials/post/social_shares.html
+++ b/layouts/partials/post/social_shares.html
@@ -1,3 +1,4 @@
+{{ if ne .Type "page" }}
 <section class="m-4 md:mx-0 md:my-8 bg-orange-50 border border-orange-500">
   <div class="px-4 py-8">
     <div class="mb-6">
@@ -23,3 +24,4 @@
     </div>
   </div>
 </section>
+{{ end }}
