style(general): narrow main column

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -40,7 +40,7 @@
   {{ partial "head/scripts.html" . }}
 </head>
 <body class="bg-cool-gray-50 border-t-4 border-orange-500 antialiased font-body">
-  <main class="sm:max-w-xl md:max-w-2xl lg:max-w-3xl sm:mx-auto">
+  <main class="sm:max-w-xl md:max-w-2xl sm:mx-auto">
     {{ partial "page/header.html" . }}
 
     {{ block "content" . }}{{ end }}
