--- a/resources/css/theme.css
+++ b/resources/css/theme.css
@@ -99,6 +99,11 @@ ul {
 }
 
 /* purgecss ignore */
+ol {
+  @apply list-decimal;
+}
+
+/* purgecss ignore */
 article > blockquote {
   @apply border-l-4 mx-4 px-4;
 }
